<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PBX Complete Route</string>
    <string name="app_description">PBX Complete Route that enables to call to the call center in short time</string>

    <string name="main_category">Categories</string>
    <string name="category_selected">Selected category</string>
    <string name="main_company">Companies</string>
    <string name="company_item_name">Company name</string>
    <string name="company_item_desc">Description</string>
    <string name="company_item_category">Category</string>
    <string name="company_selected">Selected company</string>
    <string name="route_item_desc">Route description</string>
    <string name="route_item_label">Call numbers:</string>
    <string name="callnumber_selected">Selected number</string>
    <string name="callnumber_item_name">Call number</string>

    <string name="route_item_id">Number ID</string>
    <string name="route_item_name">Route name</string>
    <string name="keyword_search">Type here what you need</string>

</resources>
