<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="horizontal" android:layout_height="wrap_content" android:id="@+id/company_item_layout"
        android:background="#F2F2FF"
        android:baselineAligned="false">

    <ImageView android:id="@+id/company_item_ivIcon" android:layout_width="wrap_content"
               android:layout_height="wrap_content" android:layout_gravity="center_vertical"
               android:layout_marginLeft="5dip" android:src="@drawable/icon_company"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/company_item_infoLayout" android:layout_marginTop="5dip"
                  android:background="#F2F2FF">
        <LinearLayout android:layout_width="match_parent" android:orientation="vertical"
                      android:layout_gravity="center_vertical|center_horizontal" android:layout_height="wrap_content"
                      android:id="@+id/company_item_layout" android:background="#F2F2FF">
            <TextView android:layout_height="wrap_content" android:id="@+id/tvCompanyName" android:textSize="14dip"
                      android:textStyle="bold" android:text="@string/company_item_name"
                      android:layout_marginLeft="10dip" android:layout_width="wrap_content"
                      android:layout_marginRight="20dip" android:textColor="#000000"/>
            <TextView android:text="@string/company_item_category" android:layout_marginTop="5dip"
                      android:layout_height="wrap_content" android:id="@+id/tvCategory"
                      android:layout_width="match_parent" android:textSize="14dip" android:layout_marginBottom="5dip"
                      android:layout_marginRight="5dip" android:layout_marginLeft="10dip"
                      android:textStyle="bold|italic" android:textColor="@android:color/black"
                      android:singleLine="true"/>
            <TextView android:text="@string/company_item_desc" android:layout_marginTop="5dip"
                      android:layout_height="wrap_content" android:id="@+id/tvDescription"
                      android:layout_width="match_parent" android:textSize="14dip" android:layout_marginBottom="5dip"
                      android:layout_marginRight="5dip" android:layout_marginLeft="10dip"
                      android:textStyle="bold|italic" android:textColor="#006633"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
